Fix bug that KTeaTime won't support intervals larger than 1 hour. Thanks to Oleg Kostyuk for reporting and thanks to Burkhard Lueck for the patch.

BUG: 275598

svn path=/trunk/KDE/kdetoys/kteatime/; revision=1236875